--- a/Project_Deploy_HA_WebApp_using_CloudFormation/server.yml
+++ b/Project_Deploy_HA_WebApp_using_CloudFormation/server.yml
@@ -151,6 +151,7 @@ Resources:
         Ebs:
           VolumeSize: '10'
   # Add auto scaling groups
+  WebAppGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
       VPCZoneIdentifier:
