--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ jobs:
       - run:
           name: "Say world"
           command: "echo world"
+  print_env_variable:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - run: "echo My name is << MY_NAME_IS >>"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -35,3 +40,6 @@ workflows:
       - print_world:
           requires:
               - print_hello
+  print_env_name_wf:
+    jobs:
+      - print_env_variable
