--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,6 @@ workflows:
   try_out_sharing_workspace:
     jobs:
       - save_hello_world_output
-      - print_output_file
-        requires:
-          - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
