--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - run:
           name: "Make a on_success event happen"
-          command: exit(0)
+          command: echo "Hello world"
       - run:
           name: "Run this on failure only"
           command: echo "Failure happened!"
