--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,40 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+orbs:
+  aws-cli: circleci/aws-cli@3.1
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  create-inventory-file:
     docker:
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
           name: "Say hello"
-          command: "echo Hello, World!"
+          command: echo "[all]" > inventory
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - inventory
+  add-hosts-to-inventory-file:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - aws-cli/setup:
+          aws-access-key-id: $AWS_ACCESS_KEY_ID
+          aws-region: us-east-1 
+          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: "Add new IPs to inventory file"
+          command: aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Project,Values=udacity" >> inventory
+      - run:
+          name: "Print out file contents"
+          command: cat inventory
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  ansible-inventory-file:
     jobs:
-      - say-hello
+      - create-inventory-file
+      - add-hosts-to-inventory-file:
+          requires:
+            - create-inventory-file
