--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,8 @@ jobs:
             - inventory
   add-hosts-to-inventory-file:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/aws-cli@3.1.4
     steps:
-      - aws-cli/setup:
-          aws-access-key-id: $AWS_ACCESS_KEY_ID
-          aws-region: us-east-1 
-          aws-secret-access-key: $AWS_SECRET_ACCESS_KEY
       - attach_workspace:
           at: ~/
       - run:
