--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: echo "[all]" > inventory
+          command: echo "[all]" > ~/inventory
       - persist_to_workspace:
           root: ~/
           paths:
@@ -22,10 +22,10 @@ jobs:
           at: ~/
       - run:
           name: "Add new IPs to inventory file"
-          command: aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Project,Values=udacity" >> inventory
+          command: aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Project,Values=udacity" >> ~/inventory
       - run:
           name: "Print out file contents"
-          command: cat inventory
+          command: cat ~/inventory
 
 workflows:
   ansible-inventory-file:
