--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  aws-cli: circleci/aws-cli@2.0.3
+  aws-cli: circleci/aws-cli@3.1.4
 jobs:
   create-inventory-file:
     docker:
@@ -16,7 +16,7 @@ jobs:
             - inventory
   add-hosts-to-inventory-file:
     docker:
-      - image: circleci/aws-cli@3.1.4
+      - image: cimg/base:stable
     steps:
       - attach_workspace:
           at: ~/
