--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            ansible-playbook -i inventory main-remote.yml
+            ansible-playbook -i CI:CD/exercise-config-and-deploymentinventory CI:CD/exercise-config-and-deploymentmain-remote.yml
 # Sequential workflow
 workflows:
   # Name the workflow
