--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - add_ssh_keys:
               # You can get this ID in the section where you registered the SSH Key
-              fingerprints: ["ca:dd:2e:dc:ab:f1:fb:d3:58:2b:b7:26:12:71:25:a6"] 
+              fingerprints: ["ae:84:22:1e:28:ac:ba:f6:e4:86:d3:3c:26:26:d7:02"] 
       - run:
           name: Install Ansible
           command: |
