--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           name: Install Ansible
           command: |
             apk add --update ansible
+            echo ansible --version
       - run:
           name: Run Playbook and Configure server
           command: |
