--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,12 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            apk add ansible
+            apk add --update ansible
       - run:
           name: Run Playbook and Configure server
           command: |
             export ANSIBLE_HOST_KEY_CHECKING=False
-            ansible-playbook --ssh-extra-args StrictHostKeyChecking=no -i CI:CD/exercise-config-and-deployment/inventory CI:CD/exercise-config-and-deployment/main-remote.yml 
+            ansible-playbook -i CI:CD/exercise-config-and-deployment/inventory CI:CD/exercise-config-and-deployment/main-remote.yml 
 # Sequential workflow
 workflows:
   # Name the workflow
