--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
   # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
-      - image: python:3.12-rc-bullseye #python.3.7 image did not work
+      - image: python:3.12-rc-alpine #python.3.7 image did not work
     steps:
       - checkout
       - add_ssh_keys:
