--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,25 @@ jobs:
           command: |
             export ANSIBLE_HOST_KEY_CHECKING=False
             ansible-playbook -i CI:CD/exercise-config-and-deployment/inventory CI:CD/exercise-config-and-deployment/main-remote.yml 
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+        - run: apk add --update curl
+        - run:
+            name: smoke test
+            command: |
+              URL="https://blog.udacity.com/"
+              # Test if website exists
+              if curl -s --head ${URL} 
+              then
+                return 0
+              else
+                return 1
+              fi
 # Sequential workflow
 workflows:
   # Name the workflow
   configure_infra_wf:
     jobs:
-      - configure_infrastructure
+      - smoke_test
